# laplace

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
crates/deadpool-audit/: Cargo.toml
crates/deadpool-audit/src/: lib.rs
crates/deadpool-audit/src/axiom_compat/: op_log.rs
crates/deadpool-audit/src/managed/: config.rs  mod.rs  reexports.rs
crates/laplace-axiom/: Cargo.toml
crates/laplace-axiom/benches/: dpor_bench.rs  dpor_integration_bench.rs  simulation_bench.rs
crates/laplace-axiom/examples/: quickstart_twin.rs  simple.rs
crates/laplace-axiom/src/: lib.rs  session.rs
crates/laplace-axiom/src/infrastructure/: mod.rs  probe_listener.rs
crates/laplace-axiom/src/oracle/: engine.rs  mod.rs
crates/laplace-axiom/src/simulation/: builder.rs  equivalence.rs  facade.rs  hooks.rs  mod.rs  replay_plugin.rs
crates/laplace-axiom/tests/: concurrency_test.rs  integration_test.rs  simulation_twin_test.rs  twin_integration_test.rs
crates/laplace-byoc-audit/: Cargo.toml
crates/laplace-byoc-audit/src/: lib.rs
crates/laplace-byoc-audit/src/axiom_compat/: mod.rs  op_log.rs
crates/laplace-byoc-audit/src/bytes_hunt/: harness.rs  mod.rs  (+1 more)
crates/laplace-core/: Cargo.toml
crates/laplace-core/benches/: context_bench.rs  entropy_bench.rs  journal_bench.rs  memory_bench.rs  pool_bench.rs  resource_bench.rs  scheduler_bench.rs  tenant_bench.rs  time_bench.rs  tracing_bench.rs
crates/laplace-core/src/: lib.rs
crates/laplace-core/tests/: benchmark_integration.rs  telemetry_twin_test.rs
crates/laplace-dpor/: Cargo.toml
crates/laplace-dpor/src/: error.rs  lib.rs
crates/laplace-ffi/: Cargo.toml
crates/laplace-ffi/src/: lib.rs
crates/laplace-futures-util-hunt/: Cargo.toml
crates/laplace-futures-util-hunt/src/: lib.rs
crates/laplace-futures-util-hunt/tests/: byoc_async.rs
crates/laplace-harness/: Cargo.toml
crates/laplace-harness/benches/: bench_harness_matrix.rs
crates/laplace-harness/src/: dsl.rs  lib.rs  registry.rs
crates/laplace-macro/: Cargo.toml
crates/laplace-macro/benches/: bench_compile_time.sh
crates/laplace-macro/src/: byoc_test.rs  convenience.rs  harness.rs  lib.rs  model.rs  target.rs  tracked_derive.rs  verify.rs
crates/laplace-macro/tests/: convenience.rs  ui.rs
crates/laplace-mesh-cli/: Cargo.toml
crates/laplace-mesh-cli/src/: main.rs
crates/laplace-mio-hunt/: Cargo.toml
crates/laplace-mio-hunt/src/: harness.rs  lib.rs  mock.rs
crates/laplace-mio-hunt/tests/: byoc_mock.rs
crates/laplace-model-rt/: Cargo.toml
crates/laplace-model-rt/src/: arc_swap.rs  async_mutex.rs  async_notify.rs  async_rwlock.rs  async_semaphore.rs  broadcast.rs  hooks.rs  lib.rs  mpsc.rs  mutex.rs  oneshot.rs  rwlock.rs  select_macro.rs  spawn.rs  task_set.rs  unmodeled.rs
crates/laplace-model-rt/tests/: arc_swap_fidelity.rs  async_broadcast_fidelity.rs  async_mpsc_fidelity.rs  async_mutex_fidelity.rs  async_notify_fidelity.rs  async_oneshot_fidelity.rs  async_rwlock_fidelity.rs  async_semaphore_fidelity.rs  async_spawn_fidelity.rs  async_time_fidelity.rs  async_watch_fidelity.rs  select_determinism.rs
crates/laplace-parking-lot-hunt/: Cargo.toml
crates/laplace-parking-lot-hunt/tests/: byoc.rs
crates/laplace-probe/: Cargo.toml
crates/laplace-probe-adapter/: Cargo.toml
crates/laplace-probe-adapter/src/: lib.rs
crates/laplace-probe-client/: Cargo.toml
crates/laplace-probe-client/src/: lib.rs
crates/laplace-probe-common/: Cargo.toml
crates/laplace-probe-common/benches/: bench_probe_common_matrix.rs
crates/laplace-probe-common/src/: adapter.rs  axiom_adapter.rs  decoder.rs  lib.rs  mock.rs  pipeline.rs
crates/laplace-probe-sdk/: Cargo.toml  README.md
crates/laplace-probe-sdk/src/: async_hooks.rs  client.rs  config.rs  event.rs  lib.rs  license.rs  model_lock.rs  session.rs  task.rs  tracked.rs  tracked_atomic.rs  tracked_parking_lot_rwlock.rs  tracked_rwlock.rs  tracked_semaphore.rs  tracked_std.rs  tracked_std_rwlock.rs
crates/laplace-probe/benches/: compression_bench.rs
crates/laplace-probe/src/: lib.rs  main.rs
crates/laplace-probe/tests/: b2_dict_sync_integration.rs  gc_h1_skip_verify.rs  gc_h2_msrv_docsrs.rs  gc_h3_padding_assert.rs  gc_l1_no_apply.rs  gc_l2_vendoring.rs  gc_l3_wfg_compat.rs
crates/laplace-rpc/: Cargo.toml
crates/laplace-rpc/src/: client.rs  lib.rs  server.rs  tls.rs
crates/laplace-rt/: Cargo.toml
crates/laplace-rt/src/: async_mutex.rs  async_time.rs  broadcast.rs  hooks.rs  lib.rs  mutex.rs  rwlock.rs  spawn.rs  task_set.rs  unmodeled.rs  watch.rs
crates/laplace-rt/tests/: arc_swap_fidelity.rs  async_broadcast_fidelity.rs  async_mpsc_fidelity.rs  async_mutex_fidelity.rs  async_notify_fidelity.rs  async_oneshot_fidelity.rs  async_rwlock_fidelity.rs  async_semaphore_fidelity.rs  async_spawn_fidelity.rs  async_time_fidelity.rs  async_watch_fidelity.rs  select_determinism.rs
crates/laplace-scribe/: Cargo.toml
crates/laplace-scribe/src/: config.rs  context.rs  db.rs  engine.rs  error.rs  index.rs  main.rs  md_parser.rs  rust_parser.rs
crates/laplace-sdk/: Cargo.toml
crates/laplace-sdk/src/: lib.rs  prelude.rs
crates/laplace-sdk/tests/: public_boundary.rs  public_facade.rs  task_set.rs  ui.rs
examples/bb8-hunt/: Cargo.toml
examples/bb8-hunt/tests/: bb8_lock_ordering.rs  bb8_real_pool.rs
examples/byoc-demo/: Cargo.toml  bug_report_0.ard
examples/byoc-demo/tests/: ab_ba_deadlock.rs  kv_store_baseline.rs
examples/byoc1b-direction-a/: Cargo.toml
examples/byoc1b-direction-a/src/: program.rs
examples/byoc1b-direction-a/tests/: free_tier.rs
examples/crossbeam-hunt/: Cargo.toml
examples/crossbeam-hunt/tests/: bounded_channel_race.rs  channel_mutex_ab_ba.rs
examples/dashmap-hunt/: Cargo.toml
examples/dashmap-hunt/src/: lib.rs
examples/dashmap-hunt/tests/: dashmap_async_ref_deadlock.rs  dashmap_basic.rs  dashmap_cross_shard.rs
examples/deadpool-hunt/: Cargo.toml
examples/deadpool-hunt/src/: lib.rs  program.rs
examples/deadpool-hunt/tests/: deadpool_lock.rs
examples/demo-server/: Cargo.toml
examples/demo-server/src/: main.rs
(+350 files in other folders)
