[workspace]
resolver = "2"
members = [
    "crates/laplace-interfaces",
    "crates/laplace-macro",
    "crates/laplace-probe-common",
    # alpha-2에서 private dep 분리 후 활성화:
    # "crates/laplace-probe-sdk",
    # "crates/laplace-sdk",
    # "crates/laplace-harness",
]

[workspace.package]
version = "0.1.0-alpha-1"
edition = "2021"
rust-version = "1.88.0"
authors = ["Laplace Labs"]
license = "Apache-2.0"
repository = "https://github.com/laplace-labs/laplace"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1.89"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# Patched crates for bug-detection examples (hunt examples only)
[patch.crates-io]
lock_api          = { path = "vendor/lock_api-patched" }
dashmap           = { path = "vendor/dashmap-patched" }
parking_lot       = { path = "vendor/parking_lot-patched" }
crossbeam-channel = { path = "vendor/crossbeam-patched" }
rayon             = { path = "vendor/rayon-patched" }
