[workspace]
resolver = "2"
members = [
    "crates/laplace-interfaces",
    "crates/laplace-dpor",
    "crates/laplace-macro",
    "crates/laplace-probe-common",
    "crates/laplace-probe-sdk",
    "crates/laplace-harness",
    "crates/laplace-sdk",
    "examples/bb8-hunt",
    "examples/byoc-demo",
    "examples/crossbeam-hunt",
    "examples/deadpool-hunt",
    "examples/integration-test",
    "examples/known-bug-hunt",
    "examples/mobc-hunt",
    "examples/mobc-real",
    "examples/r2d2-hunt",
    "examples/rayon-hunt",
]
exclude = [
    # Requires eBPF-oriented host/toolchain support; keep it explicit instead of hiding it.
    "examples/ebpf-lock-test",
    # Depends on cloud/private laplace_probe paths; keep out of public workspace checks.
    "examples/demo-server",
    # Requires resolving the parking_lot patch with SDK parking_lot_tracking without a Cargo cycle.
    "examples/dashmap-hunt",
    # Requires resolving the parking_lot patch with SDK parking_lot_tracking without a Cargo cycle.
    "examples/parking_lot-hunt",
    # Patched tokio exposes unstable all-features knobs that require tokio_unstable.
    "examples/tokio-hunt",
]

[workspace.package]
version = "0.1.0-alpha-1"
edition = "2021"
rust-version = "1.88.0"
authors = ["Laplace Labs"]
license = "Apache-2.0"
repository = "https://github.com/laplace-labs/laplace"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
async-trait = "0.1.89"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(laplace_private_verification)', 'cfg(laplace_private_harness)'] }

# Patched crates for bug-detection examples (hunt examples only)
[patch.crates-io]
laplace-harness    = { path = "crates/laplace-harness" }
lock_api          = { path = "vendor/lock_api-patched" }
dashmap           = { path = "vendor/dashmap-patched" }
parking_lot       = { path = "vendor/parking_lot-patched" }
crossbeam-channel = { path = "vendor/crossbeam-patched" }
rayon             = { path = "vendor/rayon-patched" }
mobc              = { path = "vendor/mobc" }
deadpool          = { path = "vendor/deadpool-patched" }
