[package]
name = "laplace-deadpool-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Surgical audit of deadpool 0.10 concurrency patterns using Axiom DPOR"

[lib]
name = "laplace_deadpool_audit"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
deadpool-runtime = "0.1"
num_cpus = "1.11"
tokio = { workspace = true }
laplace-core = { path = "../laplace-core", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
axiom = [
    "dep:laplace-core",
    "laplace-core/twin",
]
