[package]
name = "laplace-byoc-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Unified BYOC and deadpool concurrency audit crate for Laplace Axiom"

[lib]
name = "laplace_byoc_audit"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
deadpool-runtime = "0.1"
num_cpus = "1.11"
tokio = { workspace = true }

inventory = { version = "0.3", optional = true }
laplace-core = { path = "../laplace-core", optional = true }
laplace-macro = { path = "../laplace-macro" }
laplace-dpor = { path = "../laplace-dpor", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
axiom = ["dep:laplace-core", "laplace-core/twin"]
laplace = [
    "dep:inventory",
    "dep:laplace-core",
    "dep:laplace-dpor",
    "laplace-core/twin",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
