[package]
name = "laplace-ffi"
version.workspace = true
edition = "2021"
description = "Laplace FFI barrier for Wasm/native interop"
license = "Apache-2.0"

[dependencies]
laplace-interfaces = { path = "../laplace-interfaces" }
laplace-probe-common = { path = "../laplace-probe-common" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
