[package]
name = "laplace-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Laplace Harness Registry: centralised verification scenarios for Axiom Oracle"

[lib]
name = "laplace_harness"
path = "src/lib.rs"

[dependencies]
laplace-core = { path = "../laplace-core" }
laplace-interfaces = { path = "../laplace-interfaces" }
laplace-dpor = { path = "../laplace-dpor", optional = true }
laplace-macro = { path = "../laplace-macro", optional = true }
inventory = { version = "0.3", optional = true }
anyhow = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
deadpool = { version = "0.10", optional = true }
laplace-byoc-audit = { path = "../laplace-byoc-audit", optional = true }

[features]
default = ["twin"]
twin = ["laplace-core/twin"]
verification = [
    "dep:laplace-dpor",
    "dep:laplace-macro",
    "dep:inventory",
    "dep:deadpool",
    "dep:laplace-byoc-audit",
    "laplace-core/verification",
]
internal-audit = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
