[package]
name = "laplace-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Procedural macros for Laplace verification harness auto-discovery"
repository.workspace = true

[features]
default = []
closed-sdk-tests = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
inventory = "0.3"
laplace-probe-sdk = { path = "../laplace-probe-sdk", features = ["verification"] }
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
