[package]
name = "laplace-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Procedural macros for Laplace verification harness auto-discovery"
repository.workspace = true

[features]
default = []
closed-sdk-tests = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
laplace-model-rt = { path = "../laplace-model-rt" }
laplace-probe-sdk = { path = "../laplace-probe-sdk" }
laplace-sdk = { path = "../laplace-sdk" }
tokio = { workspace = true }
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
