[package]
name = "laplace-mesh-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Laplace Mesh CLI: test client that encodes API endpoints and sends compressed frames to laplace-probe"

[[bin]]
name = "laplace-mesh-cli"
path = "src/main.rs"
required-features = ["mesh-cli-bin"]

[dependencies]
laplace-probe = { path = "../laplace-probe" }
laplace-interfaces = { path = "../laplace-interfaces" }
laplace-macro = { path = "../laplace-macro" }
tokio = { workspace = true }

[features]
default = []
mesh-cli-bin = []
scribe_docs = []
