[package]
name = "laplace-probe-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Laplace Probe Cloud Client — WebSocket sender to probe-edge"

[lib]
name = "laplace_probe_client"
path = "src/lib.rs"

[dependencies]
laplace-probe-common = { path = "../laplace-probe-common", features = ["std"] }
tokio             = { workspace = true }
tokio-tungstenite = "0.26"
futures-util      = "0.3"
anyhow            = { workspace = true }
tracing           = { workspace = true }
bytemuck          = { version = "1.16", features = ["derive"] }
