[package]
name = "laplace-probe-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Shared eBPF/user-space types for Laplace Probe"

[lib]
name = "laplace_probe_common"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["bytemuck"]
# pipeline feature는 laplace-cloud에서만 활성화 (laplace-axiom + laplace-core 필요)
scribe_docs = []

[dependencies]
bytemuck = { version = "1.16", features = ["derive"], optional = true }
laplace-interfaces = { path = "../laplace-interfaces", version = "0.1.0-alpha-1" }
laplace-macro = { path = "../laplace-macro", version = "0.1.0-alpha-1" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_probe_common_matrix"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
