[package]
name = "laplace-probe-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Laplace SDK — TrackedMutex + embedded Ki-DPOR oracle for cargo test verification"

[features]
default = ["verification", "parking_lot_tracking"]
verification = [
    "laplace-axiom/twin",
    "laplace-axiom/verification",
    "laplace-axiom/engine",
    "laplace-core/twin",
    "laplace-probe-common/std",
    # TODO(alpha-2): move closed verification pipeline behind a cloud-only feature.
]
parking_lot_tracking = ["dep:parking_lot"]
cloud = ["dep:futures-util", "dep:tokio-tungstenite"]

[dependencies]
laplace-probe-common = { path = "../laplace-probe-common" }
laplace-probe        = { path = "../laplace-probe" }
laplace-axiom        = { path = "../laplace-axiom" }
laplace-core         = { path = "../laplace-core" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
once_cell  = "1.21"
bytemuck   = { version = "1.16", features = ["derive"] }
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

# JWT payload 디코딩 (라이선스 max_depth 읽기)
base64 = "0.22"
dirs   = "5"

# laplace.toml 파싱
toml = "0.8"

# parking_lot RwLock for reentrant read support
parking_lot = { version = "0.12", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
