[package]
name = "laplace-probe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Laplace Probe: QUIC Mesh Sidecar — unified QUIC transport and semantic wire encoding"

autobins = false

[lib]
name = "laplace_probe"
path = "src/lib.rs"

[[bin]]
name = "laplace-probe"
path = "src/main.rs"

[[bin]]
name = "lock-hunt"
path = "src/bin/lock_hunt.rs"
required-features = ["ebpf"]

[dependencies]
# Shared interfaces (provides KnulEndpoint, FfiBuffer, LaplaceError, etc.)
laplace-interfaces = { path = "../laplace-interfaces" }
laplace-core        = { path = "../laplace-core", features = ["twin"] }
laplace-macro = { path = "../laplace-macro" }

# Async runtime
tokio     = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }

# Logging
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }

# eBPF
aya       = { version = "0.13", features = ["async_tokio"] }
aya-log   = "0.2"
bytemuck  = { version = "1.16", features = ["derive"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow.workspace = true
thiserror = { workspace = true }

# QUIC transport (moved from laplace-knul)
quinn         = { version = "0.11", features = ["rustls"] }
quinn-proto   = "0.11"
dashmap       = "5.5"
rustls        = { version = "0.23", features = ["std"] }
rustls-pki-types = "1"
rcgen         = "0.14.7"

# Wire encoding (moved from laplace-mesh)
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Layer 3: byte-level compression (LZ4)
lz4_flex   = { version = "0.11", features = ["frame"] }

# Concurrency
async-trait = "0.1.89"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[features]
scribe_docs = []
ebpf = []

[[bench]]
name = "compression_bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
