[package]
name = "laplace-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "Laplace QUIC RPC transport — KnulRpcClient + KnulRpcServer (quinn wrapper)"

[dependencies]
# QUIC transport (quinn API 변경 격리 담당)
quinn       = { version = "0.11", features = ["rustls"] }
rustls      = { version = "0.23", features = ["std"] }
rcgen       = "0.14"

# 직렬화
serde_json  = "1"

# 비동기
tokio       = { version = "1", features = ["net", "io-util"] }
thiserror   = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
