[package]
name = "laplace-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Laplace SDK — one-line import for deterministic concurrency verification"
keywords = ["concurrency", "verification", "dpor", "determinism", "mutex"]
categories = ["development-tools::testing", "concurrency"]

[features]
default = []
dpor = ["dep:laplace-dpor"]
cloud        = ["laplace-probe-sdk/cloud"]

[dependencies]
laplace-probe-sdk = { path = "../laplace-probe-sdk", version = "0.1.0-alpha-1" }
laplace-macro     = { path = "../laplace-macro", version = "0.1.0-alpha-1" }
laplace-dpor      = { path = "../laplace-dpor", version = "0.1.0-alpha-1", optional = true }
tokio             = { workspace = true }

[dev-dependencies]
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
