[package]
name = "bb8-hunt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bb8 = { path = "../../../vendor/bb8-patched", features = ["laplace"] }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
laplace-sdk = { path = "../../crates/laplace-sdk", features = ["verification"] }
laplace-probe-sdk = { path = "../../crates/laplace-probe-sdk", features = ["verification"] }
laplace-macro = { path = "../../crates/laplace-macro" }
tokio = { workspace = true }
