[package]
name = "byoc-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
laplace-probe-sdk = { path = "../../crates/laplace-probe-sdk" }
laplace-macro     = { path = "../../crates/laplace-macro" }
tokio             = { workspace = true }

[dev-dependencies]
laplace-probe-sdk = { path = "../../crates/laplace-probe-sdk" }
laplace-macro     = { path = "../../crates/laplace-macro" }
tokio             = { workspace = true }
