[package]
name = "crossbeam-hunt"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
crossbeam-channel = { path = "../../../vendor/crossbeam-patched", features = ["laplace"] }

[dev-dependencies]
laplace-probe-sdk = { path = "../../crates/laplace-probe-sdk", features = ["verification"] }
