[package]
name = "dashmap-hunt"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
dashmap = { path = "../../../vendor/dashmap-patched", features = ["laplace", "raw-api"] }

[[test]]
name = "dashmap_async_ref_deadlock"
path = "tests/dashmap_async_ref_deadlock.rs"

[dev-dependencies]
laplace-probe-sdk = { path = "../../crates/laplace-probe-sdk", features = ["verification"] }
